public/css/app.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
  }
  
  body {
    background-color: #1f2833;
    background-image: url("backgroundimg1.jpg");
    font-family: 'Manrope', sans-serif;;
    margin: 0;
    padding: 0;
  }

  hr {
    display: block; height: 1px;
    border: 0; border-top: 1px solid #45a29e;
    margin: 1em 0; padding: 0; 
  }
  
  #title {
    font-family: 'Manrope', sans-serif;
    font-family: 'Oswald', sans-serif;
    color: #66fcf1;
    stroke: white;
    font-size: 80px;
    display: flex;
    flex-direction: column;
    height: 10%;
    padding: 0.9375rem 0 0.625rem 0;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 30px;
    text-align: center;
  }
  div {
    word-wrap: break-word;
    line-height: 1.25rem;
    color: white;
  }
  
  .disclaimer {
    font-size: 0.75rem;
    padding: 1rem;
  }
  
  #view-change-button {
    display: inline-block;
    position: absolute;
    width: 3.125rem;
    height: 3.125rem;
    border-radius: 1.5625rem;
    background: #AB72F8;
    top: 0.3125rem;
    right: 0.3125rem;
    line-height: 3.125rem;
    vertical-align: middle;
  }
  
  #view-change-button img {
    display: none;
    width: 100%;
    height: 100%;
    vertical-align: middle;
  }
  
  #view-change-button:not(.full) .not-full {
    display: inline-block;
  }
  
  #view-change-button.full .full {
    display: inline-block;
  }
  
  #contentParent {
    height: 100%;
  }
  
  .responsive-columns-wrapper {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-direction: row;
    -ms-display: flex;
    -ms-flex-direction: row;
  }
  
  .responsive-column {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    overflow: auto;
  }
  
  #chat-column-holder {
    text-align: center;
  }
  
  .chat-column {
    display: flex;
    flex-direction: column;
    height: 90%;
    padding: 0.9375rem 0 0.625rem 0;
    margin: auto;
    text-align: left;
    /* max-width: 25rem; */
    max-width: 65rem;
    min-width: 9.375rem;
    background-color: rgba(167, 167, 167, 0.521);
    border-radius: 25px;
  }
  
  .user-typing {
    flex: 0;
    border: none;
    color: #8d25e8;
    margin: 0.75rem;
    font-size: 15;
  }
  
  #scrollingChat {
    margin: 0.75rem;
    overflow-y: auto;
    overflow-x: hidden;
    flex: 1;
  }
  
  .message-inner {
    opacity: 0;
    margin-top: 0.9375rem;
    -webkit-transition-property: opacity, margin-top;
    -webkit-transition-duration: 0.75s;
    -webkit-transition-timing-function: ease-in;
    -moz-transition-property: opacity, margin-top;
    -moz-transition-duration: 0.75s;
    -moz-transition-timing-function: ease-in;
    -o-transition-property: opacity, margin-top;
    -o-transition-duration: 0.75s;
    -o-transition-timing-function: ease-in;
    -ms-transition-property: opacity, margin-top;
    -ms-transition-duration: 0.75s;
    -ms-transition-timing-function: ease-in;
    transition-property: opacity, margin-top;
    transition-duration: 0.75s;
    transition-timing-function: ease-in;
  }
  
  .load .message-inner {
    opacity: 1;
    margin-top: 0.3125rem;
  }
  
  .from-user {
    text-align: right;
  }
  
  .from-user .message-inner {
    position: relative;
    font-size: 1rem;
    color: #fff;
    letter-spacing: 0.015rem;
    line-height: 1.3125rem;
    background: rgb(69, 69, 255);
    border-radius: 1.25rem;
    border-bottom-right-radius: 0;
    text-align: left;
    display: inline-block;
    margin-left: 2.5rem;
    min-width: 2.5rem;
  }
  
  .from-user .message-inner p {
    margin: 0.3125rem;
    padding: 0 0.9375rem;
  }
  
  .from-user .message-inner:before, .from-user .message-inner:after {
    content: "";
    position: absolute;
  }
  
  .stateSearch {
    display: inline-block;
  }
  
  .stateSearch:hover {
    text-decoration: underline;
  }
  
  .from-user .message-inner:before {
    z-index: -2;
    bottom: -0.375rem;
    right: 0;
    height: 0.375rem;
    width: 0.5rem;
    background: #1cb3a0;
  }
  
  .from-user .message-inner:after {
    z-index: -1;
    bottom: -0.5rem;
    right: 0;
    height: 0.5rem;
    width: 0.5rem;
    background: #fff;
    border-top-right-radius: 1.25rem;
  }
  
  .from-watson, 
  .message-inner {
    /* position: relative;
    border-radius: 1.5625rem;
    font-size: 1rem;
    color: #B5B5B5;
    letter-spacing: 0.015rem;
    line-height: 1.3125rem; */
  
    margin: 5px;
    position: relative;
    font-size: 1rem;
    color: rgb(10, 10, 10);
    letter-spacing: 0.015rem;
    line-height: 1.3125rem;
    background: rgb(215, 215, 228);
    border-radius: 1.25rem;
    border-bottom-left-radius: 0;
    text-align: left;
    display: inline-block;
    margin-left: 2.5rem;
    min-width: 2.5rem;
  }
  
  .from-watson.latest .message-inner {
    color: rgb(4, 8, 8);
    font-size: 18px;
  }
  
  .from-watson p {
    margin: 0.3125rem;
    padding: 0 1.25rem;
  }
  
  .from-watson.latest.top p:before {
    content: ".";
    color: #9855D4;
    background-image: url("../img/marker_image.png");
    background-size: 0.3125rem 1.3125rem;
    position: absolute;
    z-index: 2;
    left: 0.4375rem;
    width: 0.3125rem;
    height: 1.3125rem;
    line-height: 1.3125rem;
  }
  
  #textInput {
    border: none;
    outline: none;
    background: transparent;
    font-size: 2rem;
    color: white;
    letter-spacing: 0.015rem;
    line-height: 1.3125rem;
    height: 2.5rem;
    max-width: 100%;
    margin-bottom: -0.125rem;  
    text-align: center;
  }

  input {
    text-align: center;
  }
  
  #textInput.underline {
    border-bottom: 2px solid #00B4A0;
  }
  
  ::-webkit-input-placeholder {
    color: #B5B5B5;
  }
  
  ::-moz-placeholder {
    color: #B5B5B5;
    opacity:  1;
  }
  
  input:-moz-placeholder {
    color: #B5B5B5;
    opacity:  1;
  }
  
  :-ms-input-placeholder {
    color: #B5B5B5;
  }
  
  ::-ms-clear {
    display: none;
  }
  
  .inputOutline {
    display: block;
    border-bottom: 0.0625rem solid #aeaeae;
    margin-left: 4.5rem;
    margin-right: 4.5rem; 
    margin-bottom: 1.0rem;
  }
  
  #textInputDummy {
    position:absolute;
    white-space:pre;
    top: 0;
    left: -1000%;
    opacity: 0;
  }
  
  #payload-column {
    font-family: Monaco, monospace;
    font-size: 0.75rem;
    letter-spacing: 0;
    line-height: 1.125rem;
    background-color: #23292A;
    color: #fff;
    overflow-x: auto;
  
    width: 45%;
    max-width: 32.0625rem;
    min-width: 29.6875rem;
  }
  
  #payload-column.full {
    width: 100%;
    max-width: none;
    min-width: initial;
  }
  
  #payload-column .header-text, #payload-column #payload-initial-message {
    font-size: 1.125rem;
    color: #9E9E9E;
    letter-spacing: 0.01875rem;
    padding: 0.5rem;
    padding-left: 2.5rem;
    background: #383D3E;
  }
  
  .hide {
    display: none;
  }
  
  .payload .line-numbers, .payload .payload-text {
    padding: 0.5rem;
  }
  
  .line-numbers {
    width: 2rem;
    color: #898989;
    text-align: right;
  }
  
  pre {
    margin: 0;
    word-wrap: normal;
  }
  
  .string {
    color: #54EED0;
  }
  
  .boolean, .null, .number {
    color: #CE8EFF;
  }
  
  .key {
    color: #66B7FF;
  }
  
  html{
    font-size: 16px;
  }
  
  @media only screen and (max-width: 1000px) {
    html {
      font-size: 15px;
    }
  }
  
  @media only screen and (max-width: 600px) {
    html {
      font-size: 14px;
    }
  
    .chat-column {
      padding-top: 4rem;
    }
  
    #payload-column {
      width: 0;
      max-width: none;
      min-width: initial;
    }
  }
  
  /* IBM Design fonts https://github.ibm.com/Design/fonts */
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/light/h-n-light.eot?') format('eot'),
    url('../fonts/light/h-n-light.woff2') format('woff2'),
    url('../fonts/light/h-n-light.woff') format('woff'),
    url('../fonts/light/h-n-light.ttf') format('truetype');
    font-weight: 300;
    font-style: normal;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/light-italic/h-n-light-italic.eot?') format('eot'),
    url('../fonts/light-italic/h-n-light-italic.woff2') format('woff2'),
    url('../fonts/light-italic/h-n-light-italic.woff') format('woff'),
    url('../fonts/light-italic/h-n-light-italic.ttf') format('truetype');
    font-weight: 300;
    font-style: italic;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/roman/h-n-roman.eot?') format('eot'),
    url('../fonts/roman/h-n-roman.woff2') format('woff2'),
    url('../fonts/roman/h-n-roman.woff') format('woff'),
    url('../fonts/roman/h-n-roman.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/roman-italic/h-n-roman-italic.eot?') format('eot'),
    url('../fonts/roman-italic/h-n-roman-italic.woff2') format('woff2'),
    url('../fonts/roman-italic/h-n-roman-italic.woff') format('woff'),
    url('../fonts/roman-italic/h-n-roman-italic.ttf') format('truetype');
    font-weight: 400;
    font-style: italic;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/medium/h-n-medium.eot?') format('eot'),
    url('../fonts/medium/h-n-medium.woff2') format('woff2'),
    url('../fonts/medium/h-n-medium.woff') format('woff'),
    url('../fonts/medium/h-n-medium.ttf') format('truetype');
    font-weight: 500;
    font-style: normal;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/medium-italic/h-n-medium-italic.eot?') format('eot'),
    url('../fonts/medium-italic/h-n-medium-italic.woff2') format('woff2'),
    url('../fonts/medium-italic/h-n-medium-italic.woff') format('woff'),
    url('../fonts/medium-italic/h-n-medium-italic.ttf') format('truetype');
    font-weight: 500;
    font-style: italic;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/bold/h-n-bold.eot?') format('eot'),
    url('../fonts/bold/h-n-bold.woff2') format('woff2'),
    url('../fonts/bold/h-n-bold.woff') format('woff'),
    url('../fonts/bold/h-n-bold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
  }
  @font-face {
    font-family: 'Helvetica Neue for IBM';
    src: url('../fonts/bold-italic/h-n-bold-italic.eot?') format('eot'),
    url('../fonts/bold-italic/h-n-bold-italic.woff2') format('woff2'),
    url('../fonts/bold-italic/h-n-bold-italic.woff') format('woff'),
    url('../fonts/bold-italic/h-n-bold-italic.ttf') format('truetype');
    font-weight: 700;
    font-style: italic;
  }
  
  /* IBM Icons */
  @font-face {
    font-family: 'ibm-icons';
    src:url('../fonts/ibm-icons.eot?ytcz1z') format('eot'),
    url('../fonts/ibm-icons.eot?ytcz1z#iefix') format('embedded-opentype'),
    url('../fonts/ibm-icons.ttf?ytcz1z') format('truetype'),
    url('../fonts/ibm-icons.woff?ytcz1z') format('woff'),
    url('../fonts/ibm-icons.svg?ytcz1z#ibm-icons') format('svg');
    font-weight: normal;
    font-style: normal;
  }
  
  /* IBM glyphs */
  @font-face {
    font-family: 'ibm-glyph';
    src:url('../fonts/ibm-glyphs.eot?1b8643') format('eot'),
    url('../fonts/ibm-glyphs.eot?1b8643#iefix') format('embedded-opentype'),
    url('../fonts/ibm-glyphs.ttf?1b8643') format('truetype'),
    url('../fonts/ibm-glyphs.woff?1b8643') format('woff'),
    url('../fonts/ibm-glyphs.svg?1b8643#ibm-glyph') format('svg');
    font-weight: normal;
    font-style: normal;
  }
  
  .options-list {
    color: #8d25e8;
    cursor: pointer;
  }
  
  .options-button {
    color: white;
    background-color: #8d25e8;
    border-radius: 6px;
    padding-bottom: 4px;
    padding-top: 4px;
    padding-left: 6px;
    padding-right: 6px;
    margin: 3px;
    cursor: pointer;
    display: inline-block;
  }
  

